<resources>
    <string name="app_name">GitHubResearcher</string>
    <string name="hint_username">Login/Email</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_up">Sign up</string>
    <string name="logo">GitHub Researcher Logo</string>
    <string name="photo">Photo</string>
    <string name="action_settings">Settings</string>
    <string name="tab_text_1">Repositories</string>
    <string name="tab_text_2">Search</string>
    <string name="tab_text_3">List</string>
    <string name="hint_search">Repositories</string>
    <string name="button_search">Search</string>
    <string name="hint_list">New list name</string>
    <string name="button_list">Add new list</string>
    <string name="create_list">You don\'t have any list yet…</string>
    <string name="readme">README</string>
    <string name="button_more">More</string>
    <string name="button_add_list">Add to list</string>

    <string name="retry">Retry</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="a11y_user_photo">user photo</string>
    <string name="a11y_user_name">user name</string>
    <string name="search_hint">search repositories</string>
    <string name="repo_full_name"><b>%s</b>/%s</string>
    <string name="empty_search_result">No results for <b>%s</b></string>
    <string name="a11y_contributor_avatar">contributor avatar</string>
</resources>
