<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".view.LoginActivity">

    <ImageView
        android:id="@+id/logoApp"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="6dp"
        android:layout_marginStart="6dp"
        app:srcCompat="@drawable/git_researcher" />

    <EditText
        android:id="@+id/username"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoApp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_username"
        android:inputType="textPersonName"
        android:visibility="visible" />

    <EditText
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_alignStart="@+id/username"
        android:layout_below="@+id/username"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <android.support.v7.widget.CardView
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignRight="@id/password"
        app:cardBackgroundColor="#000000"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        android:layout_below="@+id/password"
        android:layout_marginTop="46dp"
        android:id="@+id/cardView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/signIn"
                android:onClick="signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/button_sign_in"
                android:textColor="#fff"
                android:textSize="18sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="150dp"
        android:layout_height="50dp"
        app:cardBackgroundColor="#000000"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignStart="@+id/password"
        android:layout_alignTop="@+id/cardView"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/signUp"
                android:onClick="signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/button_sign_up"
                android:textColor="#fff"
                android:textSize="18sp" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>